--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+        <section data-background="lib/image/why.gif">
+          <h2>Why?</h2>
+        </section>
 
         <section>
           <h2>Why?</h2>
@@ -757,7 +760,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
         <section>
-          <h2>Your code review</h2>
+          <h2>Now your code review:</h2>
           <p>
             <img width="300" src="lib/image/sam.jpg"/>
           </p>
@@ -773,10 +776,23 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         </section>
 
 
-        <section style="text-align: left;">
-          <h1>THE END</h1>
-        </section>
+        <section>
+          <h2>Tell me your experience</h2>
+          <a href="http://dgo.to/@rodrigoaguilera">dgo.to/@rodrigoaguilera</a>
+          <p>
+          <img width="400" src="lib/image/ymbradark.png" style="background: none repeat scroll 0% 0% transparent; border: 0;" />
+          <!-- <img src="lib/image/ymbra.png" style="background: none repeat scroll 0% 0% white;" /> -->
+          </p>
+          <p>
+          rodrigo.aguilera@ymbra.com
+          </p>
 
+          <aside class="notes">
+            I'm going to repeat the session so feedback is welcome
+            <br />
+            You can do review on my code review slides.
+          </aside>
+        </section>
       </div>
 
     </div>
