--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+
+        <section data-background="lib/image/sad_keanu.jpg">
+          <h2 style="text-shadow: 4px 4px 4px #000;">"But nobody does code review..."</h2>
+        </section>
+
+
         <section>
           <h2>"But nobody does code review..."</h2>
           <p>
@@ -167,6 +173,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+        <section data-background="lib/image/ironman.gif">
+          <h2>Be prepared</h2>
+        </section>
 
         <section>
           <h2>Be prepared</h2>
@@ -191,9 +200,12 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+        <section data-background="lib/image/tmnt.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">A change in the team culture</h2>
+        </section>
 
         <section>
-          <h2>A change in the culture</h2>
+          <h2>A change in the team culture</h2>
           <p>
           <ul>
             <li class="fragment">The code is going to be read</li>
@@ -217,7 +229,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
         <section>
-          <h2>A change in the culture (continued)</h2>
+          <h2>A change in the team culture (continued)</h2>
           <p>
           <ul>
             <li class="fragment">The best time to talk about parts of the application you don't like</li>
@@ -244,6 +256,10 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+
+        <section data-background="lib/image/umbrella.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">New developers</h2>
+        </section>
 
         <section>
           <h2>New developers</h2>
@@ -297,7 +313,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         <section>
           <h2>Pre/Post commit review</h2>
           <p>
-          Pre commit is the most interesting and what most of tools do.
+          Pre commit is the most interesting <br />and what most of tools do.
           </p>
           <p>
           Post commit is also known as code audit or inspection.
@@ -309,6 +325,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
             <br>
             If you have common interface for browsing you can always do informal audit.
           </aside>
+        </section>
+
+
+        <section data-background="lib/image/robothand.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">Code review by machines</h2>
         </section>
 
 
@@ -337,6 +358,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </aside>
         </section>
 
+        <section data-background="lib/image/fancarrot.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000; margin-top: 40%;">Code review by humans</h2>
+        </section>
 
         <section>
           <h2>Code review by humans</h2>
@@ -360,10 +384,14 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         </section>
 
 
+        <section data-background="lib/image/paircats.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">Pair programming</h2>
+        </section>
+
         <section>
           <h2>Pair programming</h2>
           <p>
-            Another form of code review <br />
+            Another kind of code review <br />
           <ul>
             <li class="fragment">Real time</li>
             <li class="fragment">Very effective and great for mentoring</li>
@@ -374,6 +402,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           <aside class="notes">
             The conversation is lost.
           </aside>
+        </section>
+
+
+        <section data-background="lib/image/fire.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">If you don't do code review</h2>
         </section>
 
 
@@ -717,6 +750,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
             <br />
             Phabricator is a suite.
           </aside>
+        </section>
+
+
+        <section data-background="lib/image/happy.gif">
+          <h2 style="text-shadow: 4px 4px 4px #000;">Ego free reviews</h2>
         </section>
 
 
