Add more review

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
         <section>
-          <h2>A change in the team culture (continued)</h2>
+          <h2>A change in the team culture</h2>
           <p>
           <ul>
             <li class="fragment">The best time to talk about parts of the application you don't like</li>
@@ -342,7 +342,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           <br>
           <ul>
             <li class="fragment">Coding standards</li>
-            <li class="fragment">Unit tests</li>
+            <li class="fragment">Unit test execution</li>
             <li class="fragment">Automated builds with continous integration</li>
             <li class="fragment">PMD Mess detector, Duplicate code</li>
           </ul>
@@ -437,7 +437,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
             <br />
             Spaghetti code overall.
             <br />
-            Remenber We are a team.
+            Remeber We are a team and we all are responsible for the code, no fear.
+            <br />
+
           </aside>
         </section>
 
