--- a/index.html
+++ b/index.html
@@ -583,10 +583,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </section>
 
 
-          <section>
-            <h2>Gerrit - Intro</h2>
+        <section data-background="lib/image/intro-quick-central-gerrit.png">
             <p>
-            <img src="lib/image/intro-quick-central-gerrit.png" />
+            <!-- <img src="lib/image/intro-quick-central-gerrit.png" />  -->
             </p>
             <aside class="notes">
               Get changes from the changes pool.
